Bug fix for overlapping content in browse, search and reorder pages when you resize the window (<970px)
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@79781 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global.css
+++ b/projects/Media/docroot/assets/css/global.css
@@ -3521,3 +3521,8 @@ section.main .leftnav .menuBox label input:focus + span > span{
 	z-index: 2000;
 	background-color: #fff;
 }
+/* bug fix for the overlapping content in browse, search and reorder pages */
+
+div#quickshop,.container.browse section.main,section.container.srch section.main{
+	min-width:970px;
+}
